--- a/StickerSmash/package.json
+++ b/StickerSmash/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.8",
+    "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-dom": "18.2.0",
+    "react-native-web": "~0.19.6",
+    "@expo/webpack-config": "~19.0.1",
     "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
